force-app/main/default/objects/Action_Centre_Request__c/Action_Centre_Request__c.object-meta.xml
<CustomObject>
    <label>Action Centre Request</label>
    <nameField>
        <displayFormat>ACR-{0000}</displayFormat>
        <label>Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Centre Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>