force-app/main/default/objects/Action_Centre_Request__c/fields/Action_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Action_DateTime__c</fullName>
    <label>Action DateTime</label>
    <type>DateTime</type>
</CustomField>