force-app/main/default/objects/Action_Centre_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Action Centre Requests</relationshipLabel>
    <relationshipName>Action_Centre_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>