force-app/main/default/objects/Action_Centre_Request__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>