force-app/main/default/objects/Action_Centre_Request__c/fields/Quick_Action__c.field-meta.xml
<CustomField>
    <fullName>Quick_Action__c</fullName>
    <label>Quick Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escalation request</fullName>
            </value>
            <value>
                <fullName>Request assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>