force-app/main/default/objects/Action_Centre_Request__c/fields/Referrer_Account__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Action Centre Requests</relationshipLabel>
    <relationshipName>Action_Centre_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>