force-app/main/default/objects/Action_Centre_Request__c/fields/Referrer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Action Centre Requests</relationshipLabel>
    <relationshipName>Action_Centre_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>