force-app/main/default/objects/Action_Centre_Request__c/fields/Related_to__c.field-meta.xml
<CustomField>
    <fullName>Related_to__c</fullName>
    <label>Related to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>Customer query</fullName>
            </value>
            <value>
                <fullName>My query</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>